examples/test/testpolicy11292.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11292
  namespace: namespace346
spec:
  podSelector:
    matchLabels:
      key20: value22
      key42: value27
      key48: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value42
      podSelector:
        matchLabels:
          key10: value46
